# Ollama-MCP-GUI

./: .gitignore
ollmcp-desktop-gui/: README.md  eslint.config.js  index.html  package-lock.json  package.json
ollmcp-desktop-gui/python-backend/: pyproject.toml
ollmcp-desktop-gui/python-backend/ollmcp_gui_backend/: main.py  protocol.py
ollmcp-desktop-gui/python-backend/ollmcp_gui_backend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ollmcp-desktop-gui/src/: App.css  App.tsx  index.css
ollmcp-desktop-gui/src-tauri/: Cargo.toml  tauri.conf.json
ollmcp-desktop-gui/src-tauri/capabilities/: default.json
ollmcp-desktop-gui/src-tauri/icons/: icon.icns
ollmcp-desktop-gui/src-tauri/src/: main.rs
ollmcp-desktop-gui/src/app/: backend.ts  mcpUrl.ts  secrets.ts  storage.ts  types.ts  ui.css  youtube.ts
