[project]
name = "ollmcp-gui-backend"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = [
  "mcp-client-for-ollama>=0.15.0",
  "mcp>=1.10.1",
  "httpx>=0.27.0",
]

[project.scripts]
ollmcp-gui-backend = "ollmcp_gui_backend.main:main"

[project]
name = "ollmcp-gui-backend"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = [
  "mcp-client-for-ollama>=0.15.0",
  "mcp>=1.10.1",
  "httpx>=0.27.0",
]

[project.scripts]
ollmcp-gui-backend = "ollmcp_gui_backend.main:main"

