[package]
name = "ollmcp_desktop_gui"
version = "0.0.0"
description = "Desktop GUI for ollmcp (MCP + Ollama)"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
keyring = { version = "3", features = ["apple-native"] }
tauri-plugin-shell = "2"

# Cross-platform keychain/credential storage will be added later.

